examples/error/magicNumberContext.kl
@Use("java")
public void main(){
    println(20);

    return;
}